Fix TERRAFORM_NATIVE_PROVIDER_PATH to think it's `google` instead of `google-beta`

--- a/cluster/images/provider-gcp/Dockerfile
+++ b/cluster/images/provider-gcp/Dockerfile
@@ -44,7 +44,7 @@ ENV GOOGLE_TERRAFORM_USERAGENT_EXTENSION "upbound-provider-gcp/${CROSSPLANE_PROV
 ENV TERRAFORM_VERSION ${TERRAFORM_VERSION}
 ENV TERRAFORM_PROVIDER_SOURCE ${TERRAFORM_PROVIDER_SOURCE}
 ENV TERRAFORM_PROVIDER_VERSION ${TERRAFORM_PROVIDER_VERSION}
-ENV TERRAFORM_NATIVE_PROVIDER_PATH ${PLUGIN_DIR}/${TERRAFORM_PROVIDER_DOWNLOAD_NAME}_v${TERRAFORM_PROVIDER_VERSION}_x5
+ENV TERRAFORM_NATIVE_PROVIDER_PATH ${PLUGIN_DIR}/terraform-provider-google_v${TERRAFORM_PROVIDER_VERSION}_x5
 
 RUN apk --no-cache add ca-certificates bash
 
