--- a/package/crds/accesscontextmanager.gcp.upbound.io_serviceperimeterresources.yaml
+++ b/package/crds/accesscontextmanager.gcp.upbound.io_serviceperimeterresources.yaml
@@ -36,6 +36,7 @@ spec:
       openAPIV3Schema:
         description: ServicePerimeterResource is the Schema for the ServicePerimeterResources
           API. Allows configuring a single GCP resource that should be inside the
+          'status' block of a service perimeter.
         properties:
           apiVersion:
             description: |-
