fix(tags): add missing manual intervention annotations
Co-authored-by: Fatih Türken <103541666+turkenf@users.noreply.github.com>
Signed-off-by: declement <clementde@padok.fr>

--- a/examples/tags/v1beta1/tagbinding.yaml
+++ b/examples/tags/v1beta1/tagbinding.yaml
@@ -38,6 +38,7 @@ kind: TagValue
 metadata:
   annotations:
     meta.upbound.io/example-id: tags/v1beta1/tagbinding
+    upjet.upbound.io/manual-intervention: "This resource is skipped because the TagBinding resource is skipped"
   labels:
     testing.upbound.io/example-name: value
   name: value
