--- a/examples/tags/v1beta1/tagvalue.yaml
+++ b/examples/tags/v1beta1/tagvalue.yaml
@@ -3,6 +3,7 @@ kind: TagValue
 metadata:
   annotations:
     meta.upbound.io/example-id: tags/v1beta1/tagvalue
+    upjet.upbound.io/manual-intervention: "This resource is skipped because the dependent resource is skipped"
   labels:
     testing.upbound.io/example-name: value
   name: value
