--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -22,7 +22,7 @@ permissions:
 env:
   SUPPORTED_RELEASES_NUMBER: '1'
   # comma separated list of images, without tag
-  IMAGES: "xpkg.upbound.io/upbound/provider-gcp"
+  IMAGES: "xpkg.upbound.io/upbound/provider-family-gcp"
 
 jobs:
   setup-vars:
